--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <!-- Running Text Animation -->
-<div class="running-text-container">
-    <div class="running-text">
-        <span>🚀 Data Scientist | 🤖 Machine Learning | 📊 Data Analytics | 📈 AI Specialist | 💻 Python | 🧠 Deep Learning | 🔍 Computer Vision | 📝 NLP | ⚡ FastAPI | 🐳 Docker | ☁️ AWS | 🔥 PyTorch | 🎯 TensorFlow | 📉 Tableau | 💾 SQL | 📡 Apache Spark</span>
-    </div>
-</div>
+    <div class="running-text-container">
+        <div class="running-text">
+            <span>🚀 Data Scientist | 🤖 Machine Learning Engineer | 📊 Data Analyst | 📈 AI Specialist | 💻 Python Developer | 🧠 Deep Learning | 🔍 Computer Vision | 📝 Natural Language Processing | ⚡ FastAPI | 🐳 Docker | ☁️ AWS | 🔥 PyTorch | 🎯 TensorFlow | 📉 Tableau | 💾 SQL | 📡 Apache Spark | 📚 Research | 🏆 98% Model Accuracy</span>
+            
+        </div>
     </div>
 
     <!-- Navigation -->
