--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Running Text Animation -->
     <div class="running-text-container">
         <div class="running-text">
-            <span>🚀 Data Scientist | 🤖 Machine Learning Engineer | 📊 Data Analyst | 📈 AI Specialist | 💻 Python Developer | 🧠 Deep Learning | 🔍 Computer Vision | 📝 Natural Language Processing | ⚡ FastAPI | 🐳 Docker | ☁️ AWS | 🔥 PyTorch | 🎯 TensorFlow | 📉 Tableau | 💾 SQL | 📡 Apache Spark | 📚 Research | 🏆 98% Model Accuracy</span>
+            <span>🚀 Data Scientist | 📊 Statistician| 🤖 Machine Learning Engineer | 📊 Data Analyst | 📈 AI Specialist | 💻 Python Developer | 🧠 Deep Learning | 🔍 Computer Vision | 📝 Natural Language Processing | ⚡ FastAPI | 🐳 Docker | ☁️ AWS | 🔥 PyTorch | 🎯 TensorFlow | 📉 Tableau | 💾 SQL | 📡 Apache Spark | 📚 Research | 🏆 98% Model Accuracy</span>
             
         </div>
     </div>
@@ -45,7 +45,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <div class="greeting">Hi, my name is</div>
-                    <h1>Weldon Langat</h1>
+                    <h1>Weldon Kipkurui Langat</h1>
                     <h2>Data Scientist & AI Specialist</h2>
                     <p>I transform complex data into actionable insights, build predictive models, and develop AI solutions that drive business growth and innovation across industries.</p>
                     <div class="btn-container">
@@ -60,7 +60,7 @@
                         <div class="profile-img-placeholder">
                             <i class="fas fa-user-circle profile-img" style="font-size: 220px; color: #64ffda;"></i>
                         </div>
-                        <h3>Weldon Langat</h3>
+                        <h3>Weldon Kipkurui Langat</h3>
                         <p>Data Scientist | Machine Learning Engineer</p>
                         <div style="margin-top: 25px;">
                             <span class="tag" style="margin: 0 5px;">Python</span>
@@ -160,7 +160,7 @@
                     </div>
                     <h3 class="edu-title">MSc Financial Engineering</h3>
                     <p class="edu-institution">WorldQuant University</p>
-                    <p class="edu-description">Currently enrolled in Master of Science in Financial Engineering program, focusing on quantitative finance, risk management, and algorithmic trading.</p>
+                    <p class="edu-description">Currently enrolled in Master of Science in Financial Engineering program, focusing on quantitative finance,Data Science in Finance, risk management, and algorithmic trading.</p>
                     <div class="edu-skills">
                         <span class="skill-tag">Quantitative Finance</span>
                         <span class="skill-tag">Risk Management</span>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="edu-content">
                     <div class="edu-header">
-                        <span class="cert-badge degree">Second Class Honors</span>
+                        <span class="cert-badge degree">Second Class Honors (Upper Division)</span>
                         <span class="edu-date">2021 - 2025</span>
                     </div>
                     <h3 class="edu-title">BSc Applied Statistics with Programming</h3>
