--- a/index.html
+++ b/index.html
@@ -56,18 +56,17 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="profile-card">
-                        <div class="profile-img-placeholder">
-                            <i class="fas fa-user-circle profile-img" style="font-size: 220px; color: #64ffda;"></i>
-                        </div>
-                        <h3>Weldon Kipkurui Langat</h3>
-                        <p>Data Scientist | Machine Learning Engineer</p>
-                        <div style="margin-top: 25px;">
-                            <span class="tag" style="margin: 0 5px;">Python</span>
-                            <span class="tag" style="margin: 0 5px;">ML</span>
-                            <span class="tag" style="margin: 0 5px;">AI</span>
-                            <span class="tag" style="margin: 0 5px;">Data Analytics</span>
-                        </div>
+               <div class="profile-card">
+               <div class="profile-img-placeholder">
+            <!-- Replace  -->
+            <img src="images/Screenshot 2025-10-12 182039.png" 
+                 alt="Weldon Kipkurui Langat - Data Scientist & Machine Learning Engineer" 
+                 class="profile-img"
+                 loading="lazy">
+        </div>
+        <h3>Weldon Kipkurui Langat</h3>
+        <p>Data Scientist | Machine Learning Engineer</p>
+        <div style="margin-top: 25px;">
                     </div>
                 </div>
             </div>
