--- a/index.html
+++ b/index.html
@@ -39,39 +39,49 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-bg"></div>
-        <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <div class="greeting">Hi, my name is</div>
-                    <h1>Weldon Kipkurui Langat</h1>
-                    <h2>Data Scientist & AI Specialist</h2>
-                    <p>I transform complex data into actionable insights, build predictive models, and develop AI solutions that drive business growth and innovation across industries.</p>
-                    <div class="btn-container">
-                        <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                        <a href="#resume" class="btn" id="heroResumeBtn">
-                            <i class="fas fa-download"></i> Download Resume
-                        </a>
-                    </div>
+<section class="hero" id="home">
+    <div class="hero-bg"></div>
+    <div class="container">
+        <div class="hero-content">
+            <div class="hero-text">
+                <div class="greeting">Hi, my name is</div>
+                <h1>Weldon Kipkurui Langat</h1>
+                <h2>Data Scientist & AI Specialist</h2>
+                <p>I transform complex data into actionable insights, build predictive models, and develop AI solutions that drive business growth and innovation across industries.</p>
+                <div class="btn-container">
+                    <a href="#contact" class="btn btn-primary">Get In Touch</a>
+                    <a href="#resume" class="btn" id="heroResumeBtn">
+                        <i class="fas fa-download"></i> Download Resume
+                    </a>
                 </div>
-                <div class="hero-image">
-               <div class="profile-card">
-               <div class="profile-img-placeholder">
-            <!-- Replace  -->
-            <img src="images/Screenshot 2025-10-12 182039.png" 
-                 alt="Weldon Kipkurui Langat - Data Scientist & Machine Learning Engineer" 
-                 class="profile-img"
-                 loading="lazy">
-        </div>
-        <h3>Weldon Kipkurui Langat</h3>
-        <p>Data Scientist | Machine Learning Engineer</p>
-        <div style="margin-top: 25px;">
+            </div>
+            <div class="hero-image">
+                <div class="profile-card">
+                    <div class="profile-img-placeholder">
+                        <!-- Profile Image -->
+                        <img src="images/Screenshot 2025-10-12 182039.png" 
+                             alt="Weldon Kipkurui Langat - Data Scientist & Machine Learning Engineer" 
+                             class="profile-img"
+                             loading="lazy">
+                    </div>
+                    <h3>Weldon Kipkurui Langat</h3>
+                    <p>Data Scientist | Machine Learning Engineer</p>
+                    <div class="profile-social" style="margin-top: 25px;">
+                        <a href="https://linkedin.com/in/weldonlangat" target="_blank" rel="noopener" class="social-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://github.com/weldonlangat" target="_blank" rel="noopener" class="social-icon">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://twitter.com/weldonlangat" target="_blank" rel="noopener" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Stats Section -->
     <section class="stats" id="stats">
