--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="profile-card">
                     <div class="profile-img-placeholder">
                         <!-- Profile Image -->
-                        <img src="images/Screenshot 2025-10-12 182039.png" 
+                        <img src="image/Screenshot 2025-10-12 182039.png" 
                              alt="Weldon Kipkurui Langat - Data Scientist & Machine Learning Engineer" 
                              class="profile-img"
                              loading="lazy">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="edu-content">
                     <div class="edu-header">
-                        <span class="cert-badge degree">Second Class Honors (Upper Division)</span>
+                        <span class="cert-badge degree">Second Class Honours (Upper Division)</span>
                         <span class="edu-date">2021 - 2025</span>
                     </div>
                     <h3 class="edu-title">BSc Applied Statistics with Programming</h3>
